---------------------------------------------------------------------------------------------------
Version: 4.1.25
Date: 2022.07.XX
  Bugfixes:
    - Fixed that certain (un-)barreling furnaces did not work due to removed fluidboxes
---------------------------------------------------------------------------------------------------
Version: 4.1.24
Date: 2022.07.05
  Bugfixes:
    - Fixed Pyalienlife korlex milk barrels not being properly replaced due to py using diff. names
    - Fixed Pyrawores coke oven gas items with certain temperatures having no usage
    - Fixed omni.fluid.add_multi_temp_recipe() not working under certain conditions
    - Automatically apply all exception rules for compat to compressed versions aswell
---------------------------------------------------------------------------------------------------
Version: 4.1.23
Date: 2022.06.10
  Features:
    - Added angels "coolant-cool-steam" recipe as multi temp recipe
  Bugfixes:
    - Fixed that omni.fluid.add_multi_temp_recipe() failed on fluids with both min and max temp
      not being specified
    - Fixed that very low probability ingredient / result amounts could end up with "0"
---------------------------------------------------------------------------------------------------
Version: 4.1.22
Date: 2022.05.31
  Bugfixes:
    - Fixed that filled (gas-) canisters used as recipe ingredients were not replaced with sluids
    - Fixed that certain recipes were not craftable anymore due to exceeding the ingredient
      slot limit on some modded assemblers when converting from fluid to item
---------------------------------------------------------------------------------------------------
Version: 4.1.21
Date: 2022.05.01
  Bugfixes:
    - Fixed recipe amounts for low probabilities once again
    - Apply the recipe multiplier to catalyst_amount as well
---------------------------------------------------------------------------------------------------
Version: 4.1.20
Date: 2022.05.01
  Bugfixes: