@@ -3,6 +3,8 @@ Version: 4.1.25
 Date: 2022.07.XX
   Bugfixes:
     - Fixed that certain (un-)barreling furnaces did not work due to removed fluidboxes
+    - Fixed that fluid mining drills with a collision box > 5x5 had their item output vector below
+      themselves
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.24
 Date: 2022.07.05
